# src/main/java/api/poja/app/model/CourseInput.java
@@ -1,17 +1,3 @@
 package api.poja.app.model;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class CourseInput {
-  private String reference;
-  private String title;
-  private Integer credits;
-  private Parcours parcours;
-}
+public record CourseInput(String reference, String title, Integer credits, Parcours parcours) {}
