# src/main/java/api/poja/app/model/Exam.java
@@ -1,16 +1,5 @@
 package api.poja.app.model;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import java.time.Instant;
 
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class Exam {
-  private String id;
-  private String name;
-  private Double coefficient;
-}
+public record Exam(String id, String name, Instant schedule, Double coefficient) {}
