# src/main/java/api/poja/app/model/ExamInput.java
@@ -1,15 +1,5 @@
 package api.poja.app.model;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import java.time.Instant;
 
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class ExamInput {
-  private String name;
-  private Double coefficient;
-}
+public record ExamInput(String name, Instant schedule, Double coefficient) {}
