# src/main/java/api/poja/app/model/Student.java
@@ -1,18 +1,4 @@
 package api.poja.app.model;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class Student {
-  private String id;
-  private String firstName;
-  private String lastName;
-  private String studentCode;
-  private Parcours parcours;
-}
+public record Student(
+    String id, String firstName, String lastName, String reference, Parcours parcours) {}
